--- a/Sources/Tools/Giny.WorldView/Components/Spells/SpellComponent.razor
+++ b/Sources/Tools/Giny.WorldView/Components/Spells/SpellComponent.razor
@@ -98,7 +98,7 @@
                                     </tr>
                                     <tr>
                                         <td>Targets</td>
-                                        <td>@SpellHelper.GetTargets(SelectedEffect)</td>
+                                        <td>@SelectedEffect.GetTargetsString()</td>
                                     </tr>
                                     <tr>
                                         <td>Triggers</td>
