Refactoring spell modifiers. Typo type fix (SpellState) incurable field

--- a/Sources/Tools/Giny.WorldView/Components/Spells/SpellComponent.razor
+++ b/Sources/Tools/Giny.WorldView/Components/Spells/SpellComponent.razor
@@ -159,7 +159,7 @@
 
                                     @if (SelectedEffect.EffectEnum == EffectsEnum.Effect_SpellBoostBaseDamage ||
                                    SelectedEffect.EffectEnum == EffectsEnum.Effect_SpellBoostMinimalRange ||
-                                   SelectedEffect.EffectEnum == EffectsEnum.Effect_SpellBoostRange)
+                                   SelectedEffect.EffectEnum == EffectsEnum.Effect_AddSpellRangeMax)
                                     {
                                         <tr>
                                             <td>Buffed Spell</td>
